# nicegui-draggable

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: example.py
nicegui_draggable/: __init__.py  draggable.py
