[tool.poetry]
name = "nicegui-draggable"
version = "0.0.2"
description = "Draggable / rearrangeable elements for nicegui"
authors = ["Ziga Ivansek <ziga.ivansek@gmail.com>"]
readme = "README.md"
repository = "https://github.com/zigai/nicegui-draggable"
keywords = []
classifiers = []

[tool.poetry.dependencies]
python = "^3.10"
nicegui = "^1.4.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 100
target_version = ['py310']
